# metrics-service

./: .coderabbit.yaml  .copier-answers.yml  .dockerignore  .env.example  .gitignore  .hermeto-pip-input.json  .pre-commit-config.yaml  .protected_files.yaml  AGENTS.md  AUTOMATION_REPORTS_COLLECTORS.md  AUTOMATION_REPORTS_IMPLEMENTATION.md  AUTOMATION_REPORTS_QUICK_START.md  AUTOMATION_REPORTS_SQL_FIXES.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD_ENHANCEMENTS.md  DEPLOYMENT_IMPLEMENTATION_SUMMARY.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTING.md  METRICS_SQLITE_POC_SUMMARY.md  Makefile  PLAN.md  Procfile  README.md  README_TASKS.md  REQUIREMENTS.md  SYSTEM_AUDITOR_IMPLEMENTATION.md  SYSTEM_TASKS_IMPLEMENTATION.md  TASK_CLEANUP_USAGE.md  TODO.md  UV_SETUP_GUIDE.md  VERIFY_INITIALIZATION.md  app-dev-deploy.yml  codecov.yml  dev-requirements.txt  docker-compose.override.yml  docker-compose.prod.single.yml  docker-compose.prod.yml  (+24 more)
.claude/commands/: task-review.md
.github/: PULL_REQUEST_TEMPLATE.md  template.yml
.github/workflows/: codeql.yml  framework-update.yml  framework-validation.yml  jira-pr-link.yml  pr-checks.yml  pytest.yml  sonar_checks.yml  sync-openapi-specs.yml  sync-requirements.yml
.tekton/: metrics-service-pull-request.yaml  metrics-service-push.yaml  run-atf-tests-pull-request.yaml
apps/: settings.py  urls.py
apps/api/: .copier-answers.yml  apps.py  urls.py
apps/automation_reports/: apps.py  database_router.py  models.py
apps/bi_connector/: admin_views.py  apps.py  feature_flags.yaml  models.py  settings.py  urls.py
apps/core/: .copier-answers.yml  admin.py  apps.py  logging_config.py  middleware.py  mixins.py  models.py  permissions.py  renderers.py  resource_api.py  segment.py  segment_utils.py  settings.py  signals.py  tasks.py  urls.py  utils.py
apps/dashboard/: .copier-answers.yml  apps.py  settings.py  urls.py  views.py
apps/dashboard_reports/: apps.py  awx_queries.py  filters.py  models.py  serializers.py  tasks.py  urls.py  utils.py
apps/dynamic_settings/: __init__.py  admin.py  apps.py  models.py  urls.py  utils.py
apps/events/: admin.py  apps.py  models.py  urls.py
apps/health/: __init__.py  apps.py  checks.py  urls.py  views.py
apps/metrics_storage/: apps.py  database_router.py  models.py  models_normalized.py  view_models.py
apps/prometheus_scraper/: apps.py  client.py  models.py  settings.py  tasks.py
apps/settings/: __init__.py  defaults.py  development.py  dispatcherd.yaml  production.py  test.py  validators.py
apps/tasks/: .copier-answers.yml  __init__.py  admin.py  api_utils.py  apps.py  collector_helpers.py  cron_scheduler.py  datetime_utils.py  dispatcherd_config.py  error_decorators.py  feature_flags.yaml  logging_utils.py  mixins.py  models.py  pipeline.py  prom_metrics.py  settings.py  signals.py  simple_scheduler.py  submission_utils.py  task_groups.py  tasks.py  tasks_automation_reports.py  tasks_collector.py  tasks_system.py  urls.py  utils.py
config/: dispatcherd.docker.yaml  dispatcherd.yaml  settings.yaml  settings.yaml.example
dashboard/: views.py
dashboard/templates/: dashboard.html
deployment/: ALL_IN_ONE_OPTIONS.md  QUICK_START.md  README.md  SINGLE_VS_MULTI_CONTAINER.md
deployment/containers/: Containerfile.all-in-one  Containerfile.all-in-one-simple  Containerfile.base  Containerfile.dispatcher  Containerfile.scheduler  Containerfile.web
deployment/scripts/: build-containers.sh  container-entrypoint.sh  install-systemd-services.sh  run-containers-local.sh  setup-production.sh  start-all-services.sh
deployment/supervisor/: supervisord.conf
deployment/systemd/: container-metrics-service-dispatcher.service  container-metrics-service-scheduler.service  container-metrics-service-web.service  metrics-service-dispatcher.service  metrics-service-scheduler.service  metrics-service-web.service  metrics-service.target
deployment/uwsgi/: metrics-service-container.ini  metrics-service-http.ini  metrics-service.ini
docs/: CSV_CONVERSION_FIX.md  VIEWS_QUICK_START.md  bi-connector.md  dashboard-collection-merge-plan.md  dashboard-collection-merge-summary.md  json-vs-normalized-metrics.md  using-views-with-bi-tools.md
examples/: create_sample_tasks.py
metrics_service/: __init__.py  _version.py  asgi.py  cli.py  logger.py  settings.py  settings_validators.py  test_urls.py  urls.py  wsgi.py
metrics_service/settings/: README.md  __init__.py  defaults.py  development.py  post_load.py  production.py  test.py
my_service/: __init__.py  _version.py  asgi.py  urls.py  wsgi.py
my_service/settings/: __init__.py  defaults.py  development.py  post_load.py  production.py  test.py
scripts/: dev-setup.sh  docker-entrypoint.sh  dump_daily_anonymized.py  dump_hourly.py  entrypoint-dispatcherd.sh  entrypoint-init.sh  entrypoint-scheduler.sh  entrypoint-web.sh  generate-certs.sh  init.sh  run-anon.sh  run-tests.sh  run_task.py  test-nginx-setup.sh  test-setup.sh
scripts/nginx/: nginx.conf
scripts/prometheus/: prometheus.yml
scripts/supervisord/: supervisord_dispatcherd.conf  supervisord_scheduler.conf  supervisord_web.conf
templates/registration/: login.html
tests/: conftest.py  test_common.py  test_coverage.py  test_models.py  test_simple.py  test_utils.py
tests/base/: __init__.py  task_test_base.py
tests/coverage/: conftest.py  test_awx_queries.py  test_cleanup.py  test_collectors.py  test_core_signals.py  test_core_views.py  test_cron_scheduler.py  test_cron_scheduler_2.py  test_daily_anonymize.py  test_dashboard_filters.py  test_dashboard_models_extended.py  test_dashboard_report_viewset.py  test_dashboard_reports_models.py  test_dashboard_reports_tasks.py  test_dashboard_viewsets.py  test_dispatcherd_config.py  test_dynamic_settings_utils.py  test_final_push.py  test_final_push_2.py  test_management_commands.py  test_management_commands_2.py  test_management_commands_3.py  test_management_commands_4.py  test_management_commands_5.py  test_misc_coverage.py  test_misc_coverage_2.py  test_models_extra.py  (+9 more)
tools/: README.md  dev.sh  generate-openapi.sh
(+575 files in other folders)
