[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "metrics-service"
description = "AAP Service Template following modern standards"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "AAP Emerging Services", email = "aap-emerging-services@redhat.com"},
]
keywords = ["ansible", "automation", "platform", "service"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
]
dynamic = ["version"]

dependencies = [
    "Django>=4.2,<5.0",
    "djangorestframework>=3.15",
    "django-ansible-base[jwt_consumer,api_documentation,rbac,rest_filters]",
    "django-split-settings>=1.2",
    "drf-spectacular>=0.27",
    "django-cors-headers>=4.0",
    "psycopg[binary]>=3.1",
    "psycopg2-binary>=2.9.0",  # Required for dispatcherd PostgreSQL LISTEN/NOTIFY
    "channels>=4.0",
    "dynaconf>=3.1.0",
    "social-auth-app-django>=5.0.0,<5.5",
    "django-oauth-toolkit>=2.2.0",
    "dispatcherd>=2025.5.21",
    "croniter>=1.3.0",
    "uv>=0.8.22",
    "apscheduler>=3.10.0",
    "metrics-utility @ git+https://github.com/ansible/metrics-utility.git",
    "pip>=25.2",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "ruff>=0.1.0",
    "isort>=5.12",
    "mypy>=1.5",
    "django-stubs[compatible-mypy]>=4.2",
    "djangorestframework-stubs[compatible-mypy]>=3.14",
    "pytest>=7.4",
    "pytest-django>=4.5",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "coverage>=7.3",
    "factory-boy>=3.3",
    "django-debug-toolbar>=4.2",
    "pre-commit>=3.4",
]

ldap = [
    "python-ldap>=3.4.0",
    "django-auth-ldap>=5.2.0",
    "ldap-filter>=1.0.1",
]

test = [
    "pytest>=7.4",
    "pytest-django>=4.5",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "coverage>=7.3",
    "factory-boy>=3.3",
]

docs = [
    "sphinx>=7.1",
    "sphinx-rtd-theme>=1.3",
    "sphinx-autodoc-typehints>=1.24",
]

[project.urls]
Homepage = "https://github.com/ansible/platform-service-template"
Documentation = "https://platform-service-template.readthedocs.io/"
Repository = "https://github.com/ansible/platform-service-template"
"Bug Tracker" = "https://github.com/ansible/platform-service-template/issues"

[tool.setuptools]
packages = ["metrics_service", "apps", "apps.api", "apps.core", "apps.tasks", "apps.dashboard"]


[tool.uv]
dev-dependencies = [
    "black>=23.0",
    "ruff>=0.1.0",
    "isort>=5.12",
    "mypy>=1.5",
    "django-stubs[compatible-mypy]>=4.2",
    "djangorestframework-stubs[compatible-mypy]>=3.14",
    "pytest>=7.4",
    "pytest-django>=4.5",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "coverage>=7.3",
    "factory-boy>=3.3",
    "django-debug-toolbar>=4.2",
    "pre-commit>=3.4",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C90", # mccabe complexity
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "PLR", # pylint refactoring (complexity, code smells)
    "PIE", # flake8-pie (misc linting)
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "S101",  # use of assert detected
    "S311",  # pseudo-random generators not suitable for security/cryptographic purposes
    "PLR0913",  # too many arguments (we have some complex functions)
    "PLR2004",  # magic value comparison (common in tests)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S101",     # Allow assert in tests
    "S106",     # Allow hardcoded passwords in tests
    "S603",     # Allow subprocess in tests
    "PLR0915",  # Allow too many statements in tests
    "PLR0912",  # Allow too many branches in tests
    "PLR2004",  # Allow magic values in tests
    "F632",     # Allow is comparison in tests (common pattern)
]
"**/conftest.py" = ["S101"]
"**/settings/**/*.py" = ["S105", "S106"]  # Allow hardcoded passwords in settings
"manage.py" = ["T20"]

[tool.ruff.lint.mccabe]
max-complexity = 15  # Increased to match Sonar's threshold

[tool.ruff.lint.pylint]
max-branches = 15      # Maximum number of branches (matches Sonar S3776)
max-statements = 50    # Maximum number of statements in function
max-returns = 6        # Maximum number of return statements
max-args = 8           # Maximum function arguments (relaxed for complex functions)

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_django = "django"
known_first_party = ["metrics_service", "apps"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python = "3.11"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start with false, gradually enable
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "metrics_service.settings.test"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "metrics_service.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--cov=metrics_service",
    "--cov=apps",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "functional: Functional tests",
    "slow: Slow running tests",
]
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore:Overriding setting DATABASES:UserWarning",
    "ignore::pytest.PytestCollectionWarning",
]

[tool.coverage.run]
source = ["metrics_service", "apps"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/venv/*",
    "manage.py",
    "*/settings/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
] 
