[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "metrics-service"
description = "AAP Metrics Service"
readme = "README.md"
requires-python = "==3.12.*"
license = "MIT"
authors = [
    {name = "AAP Emerging Services", email = "aap-emerging-services@redhat.com"},
]
keywords = ["ansible", "metrics", "service"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 5.2.7",
]
version = "1.0.0"

dependencies = [
    "Django==5.2.7",
    "djangorestframework>=3.15",
    # >=2025.12.12 accepts both PyPI releases and the git override (2025.12.16.0.dev4 in uv.lock).
    # Use `uv sync` so [tool.uv.sources] applies; plain `pip install .` will use latest from PyPI.
    "django-ansible-base[rest_filters,jwt_consumer,resource_registry,rbac,feature_flags,api_documentation]>=2026.1.26",
    "psycopg[binary]>=3.1",  # Binary wheel; use [c] only if C build tools available
    "psycopg2-binary>=2.9.0",  # Binary wheel for dispatcherd PostgreSQL LISTEN/NOTIFY (no C compiler in Docker)
    "dynaconf>=3.1.0",
    "dispatcherd>=2026.1.27",
    "croniter>=1.3.0",
    "apscheduler>=3.10.0",
    "metrics-utility>=0.8.0",
    "django-prometheus>=2.3.1",
    "django-extensions>=3.2",
    "gunicorn>=23.0",
    "whitenoise>=6.6",
    "pip>=25.2",
    "packaging>=20.0",  # Required for setuptools-scm during source builds
    "django-generate-series>=2026.2.1", # Required for generating time series data for dashboard report charts
]

[project.optional-dependencies]
ldap = [
    "python-ldap>=3.4.0",
    "django-auth-ldap>=5.2.0",
    "ldap-filter>=1.0.1",
]

test = [
    "pytest>=7.4",
    "pytest-django>=4.5",
    "pytest-cov>=4.1",
    "pytest-asyncio>=1.4.0",
    "coverage>=7.3",
    "factory-boy>=3.3",
]

docs = [
    "sphinx>=7.1",
    "sphinx-rtd-theme>=1.3",
    "sphinx-autodoc-typehints>=1.24",
]

[project.scripts]
metrics-service = "metrics_service.cli:main"

[project.urls]
Homepage = "https://github.com/ansible/platform-service-template"
Documentation = "https://platform-service-template.readthedocs.io/"
Repository = "https://github.com/ansible/platform-service-template"
"Bug Tracker" = "https://github.com/ansible/platform-service-template/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["metrics_service*", "apps*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"apps.settings" = ["*.yaml"]
"apps.tasks" = ["feature_flags.yaml"]


[dependency-groups]
dev=[
    "black>=23.0",
    "coverage>=7.3",
    "django-debug-toolbar>=4.2",
    "django-stubs[compatible-mypy]>=4.2",
    "djangorestframework-stubs[compatible-mypy]>=3.14",
    "factory-boy>=3.3",
    "isort>=5.12",
    "mypy>=1.5",
    "poethepoet>=0.37.0",
    "pre-commit>=3.4",
    "psutil>=7.2.2",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=4.1",
    "pytest-django>=4.5",
    "pytest>=7.4",
    "ruff>=0.15.18",
    "openapi-spec-validator>=0.7.2"
]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C90", # mccabe complexity
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "PLR", # pylint refactoring (complexity, code smells)
    "PIE", # flake8-pie (misc linting)
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "S101",  # use of assert detected
    "S311",  # pseudo-random generators not suitable for security/cryptographic purposes
    "PLR0913",  # too many arguments (we have some complex functions)
    "PLR2004",  # magic value comparison (common in tests)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S101",     # Allow assert in tests
    "S106",     # Allow hardcoded passwords in tests
    "S603",     # Allow subprocess in tests
    "PLR0915",  # Allow too many statements in tests
    "PLR0912",  # Allow too many branches in tests
    "PLR2004",  # Allow magic values in tests
    "F632",     # Allow is comparison in tests (common pattern)
    "F841",     # Allow unused local variables in tests (intermediate results)
    "S110",     # Allow try-except-pass in tests (expected-exception patterns)
    "S108",     # Allow /tmp paths in tests
    "S104",     # Allow binding to all interfaces in tests
    "SIM105",   # Allow try-except-pass instead of contextlib.suppress in tests
    "SIM222",   # Allow `or True` tautologies in tests (explicit intent)
    "F401",     # Allow unused imports in tests
]
"**/conftest.py" = ["S101"]
"apps/settings/*.py" = ["S105", "S106"]  # Allow hardcoded passwords in settings
"tests/unit/*.py" = ["S105", "S106"]  # Allow hardcoded passwords in tests
"manage.py" = ["T20"]

[tool.ruff.lint.mccabe]
max-complexity = 15  # Increased to match Sonar's threshold

[tool.ruff.lint.pylint]
max-branches = 15      # Maximum number of branches (matches Sonar S3776)
max-statements = 50    # Maximum number of statements in function
max-returns = 6        # Maximum number of return statements
max-args = 8           # Maximum function arguments (relaxed for complex functions)

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_django = "django"
known_first_party = ["metrics_service", "apps"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start with false, gradually enable
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "metrics_service.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "metrics_service.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests", "apps/core/tests"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--reuse-db",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "functional: Functional tests",
    "slow: Slow running tests",
]
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango60Warning",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore:Overriding setting DATABASES:UserWarning",
    "ignore::pytest.PytestCollectionWarning",
]

[tool.coverage.run]
source = ["."]
relative_files = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "tests/*",
    "*/venv/*",
    ".venv/*",
    "manage.py",
    "*/settings/*",
    "*/__pycache__/*",
    "scripts/*",
    "conftest.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.poe]
executor.type = "uv"

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format ."
unit-test = "pytest -v"
check = ["format", "lint", "unit-test"]

[tool.poe.tasks.clean]
help = "Clean local caches for mypy, pytest, python"
script = "poethepoet.scripts:rm('.mypy_cache', '.pytest_cache', './**/__pycache__', './**/*.pyc')"

[tool.poe.tasks.validate]
shell = """
python -c "
import yaml
with open('.copier-answers.yml') as f:
    d = yaml.safe_load(f)
    branch = d.get('src_branch', '')
    src = d.get('_src_path', '')
    from pathlib import Path
    if Path(src).is_dir():
        print(f'uvx --refresh --from {src} platform-service-framework validate')
    else:
        print(f'uvx --refresh git+{src}@{branch} validate')
" | sh
"""

[tool.poe.tasks.update]
help = "Update the project from template (use --core to also update core templates)"
args = [
  { name = "core", help = "Also update core templates", type = "boolean" }
]
shell = """
python -c "
import yaml
import os
with open('.copier-answers.yml') as f:
    d = yaml.safe_load(f)
    branch = d.get('src_branch', '')
    src = d.get('_src_path', '')
    core = '$core'
    core_flag = ' --core' if core == 'True' else ''
    from pathlib import Path
    if Path(src).is_dir():
        print(f'uvx --refresh --from {src} platform-service-framework update{core_flag}')
    else:
        print(f'uvx --refresh git+{src}@{branch} update{core_flag}')
" | sh
"""

[tool.uv.sources]
# Use resolved commit (not branch "devel") so uv pip compile sees a single ref and does not conflict with requirements-pinned.txt. After uv lock, update this to match the commit in uv.lock for django-ansible-base.
django-ansible-base = { git = "https://github.com/ansible/django-ansible-base", rev = "7596a0cc12785eff647af4f7aef80c77da33eed8" }
